// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`App create 1`] = `
<DocumentFragment>
  <div
    class="StyledGrommet-sc-19lkkz7-0 jtlCeJ"
  >
    <div
      class="StyledBox-sc-13pk1d4-0 coKjDy"
    >
      <div
        class="StyledBox-sc-13pk1d4-0 emyfQI"
      >
        <header
          class="StyledBox-sc-13pk1d4-0 RvILx"
        >
          <div
            class="StyledGrid-sc-1wofa1l-0 dqOOen"
          >
            <div
              class="StyledBox-sc-13pk1d4-0 ixbQGl"
            />
            <div
              class="StyledBox-sc-13pk1d4-0 eALdhU"
            >
              <h1
                class="StyledHeading-sc-1rdh4aw-0 fKqjMz"
              >
                grommet designer
              </h1>
            </div>
            <div
              class="StyledBox-sc-13pk1d4-0 eqSQbA"
            >
              <p
                class="StyledParagraph-sc-tbetod-0 hkPoSh"
              >
                design with grommet components
              </p>
            </div>
            <div
              class="StyledBox-sc-13pk1d4-0 QcRkD"
            >
              <a
                class="StyledButton-sc-323bzc-0 feJhTt"
                href="/_new"
                title="start a new design"
              >
                New
              </a>
            </div>
          </div>
        </header>
      </div>
      <div
        class="StyledBox__StyledBoxGap-sc-13pk1d4-1 jjGzJM"
      />
      <div
        class="StyledBox-sc-13pk1d4-0 jDvbRo"
      >
        <span
          class="StyledText-sc-1sadyjn-0 fienam"
        >
          Hi, ... maybe create a new design?
        </span>
      </div>
      <div
        class="StyledBox__StyledBoxGap-sc-13pk1d4-1 jjGzJM"
      />
      <div
        class="StyledBox-sc-13pk1d4-0 emyfQI"
      >
        <div
          class="StyledBox-sc-13pk1d4-0 fPVWOd FileInput__ContentsBox-sc-1jzq7im-0 gevRmw"
        >
          <input
            accept=".json"
            class="StyledFileInput-sc-rl7ywv-0 gzwuNG"
            type="file"
          />
          <div
            class="StyledBox-sc-13pk1d4-0 bJBAzo"
          >
            <span
              class="StyledText-sc-1sadyjn-0 eVYwor FileInput__Message-sc-1jzq7im-2 fuALtS"
            >
              Import - drop design file here
            </span>
            <a
              class="StyledAnchor-sc-1rp7lwl-0 dlplEK"
              tabindex="-1"
            >
              browse
            </a>
          </div>
        </div>
      </div>
      <div
        class="StyledBox__StyledBoxGap-sc-13pk1d4-1 jjGzJM"
      />
      <div
        class="StyledBox-sc-13pk1d4-0 XnyVS"
      >
        <div
          class="StyledBox-sc-13pk1d4-0 emyfQI"
        >
          <div
            class="StyledBox-sc-13pk1d4-0 fRLuvd"
          >
            <h2
              class="StyledHeading-sc-1rdh4aw-0 cMySZi"
            >
              storage
            </h2>
            <div
              class="StyledBox__StyledBoxGap-sc-13pk1d4-1 fZpRdr"
            />
            <div
              class="StyledBox-sc-13pk1d4-0 cQdPcb"
            >
              <svg
                aria-label="Bar meter with values 0, 0, 0, 0, 0, 0, 0 out of 100"
                class="StyledMeter-sc-nsxarx-0 gCQmFw"
                height="24"
                preserveAspectRatio="none"
                viewBox="0 0 384 24"
                width="384"
              >
                <path
                  d="M 0,12 L 384,12"
                  fill="none"
                  stroke="#F2F2F2"
                  stroke-linecap="square"
                  stroke-opacity="0.4"
                  stroke-width="24"
                />
              </svg>
              <div
                class="StyledBox__StyledBoxGap-sc-13pk1d4-1 iGPQzj"
              />
              <span
                class="StyledText-sc-1sadyjn-0 ldA-DUE"
              >
                0 K total
              </span>
            </div>
          </div>
        </div>
      </div>
      <div
        class="StyledBox__StyledBoxGap-sc-13pk1d4-1 jjGzJM"
      />
      <div
        class="StyledBox-sc-13pk1d4-0 emyfQI"
      >
        <footer
          class="StyledBox-sc-13pk1d4-0 dYGLtY"
        >
          <button
            aria-label="Change settings"
            class="StyledButton-sc-323bzc-0 hzRFzp"
            type="button"
          >
            <svg
              aria-label="Brush"
              class="StyledIcon-sc-ofa7kd-0 jCZnaS"
              viewBox="0 0 24 24"
            >
              <path
                d="M9.312 11.73a5.001 5.001 0 0 0-5.362 1.12c-1.953 1.952-1.414 8.485-1.414 8.485s6.532.538 8.485-1.415a5.001 5.001 0 0 0 1.12-5.362L22.334 4.364a1.997 1.997 0 0 0 0-2.828 1.995 1.995 0 0 0-2.828 0L9.312 11.729zm1.002-1.617 1.838 1.838 1.697 1.697"
                fill="none"
                stroke="#000"
                stroke-width="2"
              />
            </svg>
          </button>
        </footer>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`App create 2`] = `
<DocumentFragment>
  <div
    class="StyledGrommet-sc-19lkkz7-0 jtlCeJ"
  >
    <div
      class="StyledBox-sc-13pk1d4-0 coKjDy"
    >
      <div
        class="StyledBox-sc-13pk1d4-0 emyfQI"
      >
        <header
          class="StyledBox-sc-13pk1d4-0 dIgkfr"
        >
          <div
            class="StyledGrid-sc-1wofa1l-0 dqOOen"
          >
            <div
              class="StyledBox-sc-13pk1d4-0 ixbQGl"
            />
            <div
              class="StyledBox-sc-13pk1d4-0 eALdhU"
            >
              <h1
                class="StyledHeading-sc-1rdh4aw-0 fKqjMz"
              >
                new design
              </h1>
            </div>
            <div
              class="StyledBox-sc-13pk1d4-0 eqSQbA"
            />
            <div
              class="StyledBox-sc-13pk1d4-0 QcRkD"
            >
              <button
                aria-label="cancel creating a new design"
                class="StyledButton-sc-323bzc-0 iGmGqZ"
                type="button"
              >
                <svg
                  aria-label="Close"
                  class="StyledIcon-sc-ofa7kd-0 jCZnaS"
                  viewBox="0 0 24 24"
                >
                  <path
                    d="m3 3 18 18M3 21 21 3"
                    fill="none"
                    stroke="#000"
                    stroke-width="2"
                  />
                </svg>
              </button>
            </div>
          </div>
        </header>
        <form>
          <div
            class="StyledBox-sc-13pk1d4-0 bJKUjK FormField__FormFieldBox-sc-m9hood-0 bDnNjI"
          >
            <label
              class="StyledText-sc-1sadyjn-0 glxzPv"
              for="name"
            >
              name
            </label>
            <div
              class="StyledBox-sc-13pk1d4-0 ekdXJk FormField__FormFieldContentBox-sc-m9hood-1 cwAnbn"
            >
              <div
                class="StyledTextInput__StyledTextInputContainer-sc-1x30a0s-1 ddykB"
              >
                <input
                  autocomplete="off"
                  class="StyledTextInput-sc-1x30a0s-0 cxKzl"
                  id="name"
                  name="name"
                  value=""
                />
              </div>
            </div>
          </div>
          <div
            class="StyledBox-sc-13pk1d4-0 jCFAxj"
            id="startWith"
            role="radiogroup"
          >
            <label
              class="StyledRadioButton__StyledRadioButtonContainer-sc-g1f6ld-0 kORknD"
              for="startWith-start with a blank design"
            >
              <div
                class="StyledBox-sc-13pk1d4-0 iudayb StyledRadioButton-sc-g1f6ld-5 keMHan"
              >
                <input
                  checked=""
                  class="StyledRadioButton__StyledRadioButtonInput-sc-g1f6ld-1 jvFKej"
                  id="startWith-start with a blank design"
                  name="startWith"
                  tabindex="0"
                  type="radio"
                  value="start with a blank design"
                />
                <div
                  class="StyledBox-sc-13pk1d4-0 fJpexJ StyledRadioButton__StyledRadioButtonBox-sc-g1f6ld-4 fWeldY"
                >
                  <svg
                    class="StyledRadioButton__StyledRadioButtonIcon-sc-g1f6ld-3 jMAcxd"
                    preserveAspectRatio="xMidYMid meet"
                    viewBox="0 0 24 24"
                  >
                    <circle
                      cx="12"
                      cy="12"
                      r="6"
                    />
                  </svg>
                </div>
              </div>
              <span
                class="StyledRadioButton__StyledRadioButtonLabel-sc-g1f6ld-2"
              >
                start with a blank design
              </span>
            </label>
            <div
              class="StyledBox__StyledBoxGap-sc-13pk1d4-1 iGPQzj"
            />
            <label
              class="StyledRadioButton__StyledRadioButtonContainer-sc-g1f6ld-0 kORknD"
              for="startWith-duplicate an existing design"
            >
              <div
                class="StyledBox-sc-13pk1d4-0 iudayb StyledRadioButton-sc-g1f6ld-5 keMHan"
              >
                <input
                  class="StyledRadioButton__StyledRadioButtonInput-sc-g1f6ld-1 jvFKej"
                  id="startWith-duplicate an existing design"
                  name="startWith"
                  tabindex="-1"
                  type="radio"
                  value="duplicate an existing design"
                />
                <div
                  class="StyledBox-sc-13pk1d4-0 kRQUWV StyledRadioButton__StyledRadioButtonBox-sc-g1f6ld-4 fWeldY"
                />
              </div>
              <span
                class="StyledRadioButton__StyledRadioButtonLabel-sc-g1f6ld-2"
              >
                duplicate an existing design
              </span>
            </label>
          </div>
          <div
            class="StyledBox-sc-13pk1d4-0 bJKUjK FormField__FormFieldBox-sc-m9hood-0 bDnNjI"
          >
            <label
              class="StyledText-sc-1sadyjn-0 glxzPv"
            >
              theme
            </label>
            <div
              class="StyledBox-sc-13pk1d4-0 dpvfKN FormField__FormFieldContentBox-sc-m9hood-1 ioqNEM"
            >
              <div
                class="StyledBox-sc-13pk1d4-0 cngkLX"
                role="radiogroup"
              >
                <label
                  class="StyledRadioButton__StyledRadioButtonContainer-sc-g1f6ld-0 kORknD"
                  for="grommet"
                >
                  <div
                    class="StyledBox-sc-13pk1d4-0 iudayb StyledRadioButton-sc-g1f6ld-5 keMHan"
                  >
                    <input
                      checked=""
                      class="StyledRadioButton__StyledRadioButtonInput-sc-g1f6ld-1 jvFKej"
                      id="grommet"
                      name="theme"
                      tabindex="0"
                      type="radio"
                      value="grommet"
                    />
                    <div
                      class="StyledBox-sc-13pk1d4-0 fJpexJ StyledRadioButton__StyledRadioButtonBox-sc-g1f6ld-4 fWeldY"
                    >
                      <svg
                        class="StyledRadioButton__StyledRadioButtonIcon-sc-g1f6ld-3 jMAcxd"
                        preserveAspectRatio="xMidYMid meet"
                        viewBox="0 0 24 24"
                      >
                        <circle
                          cx="12"
                          cy="12"
                          r="6"
                        />
                      </svg>
                    </div>
                  </div>
                  <span
                    class="StyledRadioButton__StyledRadioButtonLabel-sc-g1f6ld-2"
                  >
                    grommet
                  </span>
                </label>
                <div
                  class="StyledBox__StyledBoxGap-sc-13pk1d4-1 iGPQzj"
                />
                <label
                  class="StyledRadioButton__StyledRadioButtonContainer-sc-g1f6ld-0 kORknD"
                  for="hpe"
                >
                  <div
                    class="StyledBox-sc-13pk1d4-0 iudayb StyledRadioButton-sc-g1f6ld-5 keMHan"
                  >
                    <input
                      class="StyledRadioButton__StyledRadioButtonInput-sc-g1f6ld-1 jvFKej"
                      id="hpe"
                      name="theme"
                      tabindex="-1"
                      type="radio"
                      value="hpe"
                    />
                    <div
                      class="StyledBox-sc-13pk1d4-0 kRQUWV StyledRadioButton__StyledRadioButtonBox-sc-g1f6ld-4 fWeldY"
                    />
                  </div>
                  <span
                    class="StyledRadioButton__StyledRadioButtonLabel-sc-g1f6ld-2"
                  >
                    hpe
                  </span>
                </label>
                <div
                  class="StyledBox__StyledBoxGap-sc-13pk1d4-1 iGPQzj"
                />
                <label
                  class="StyledRadioButton__StyledRadioButtonContainer-sc-g1f6ld-0 kORknD"
                  for="other"
                >
                  <div
                    class="StyledBox-sc-13pk1d4-0 iudayb StyledRadioButton-sc-g1f6ld-5 keMHan"
                  >
                    <input
                      class="StyledRadioButton__StyledRadioButtonInput-sc-g1f6ld-1 jvFKej"
                      id="other"
                      name="theme"
                      tabindex="-1"
                      type="radio"
                      value="other"
                    />
                    <div
                      class="StyledBox-sc-13pk1d4-0 kRQUWV StyledRadioButton__StyledRadioButtonBox-sc-g1f6ld-4 fWeldY"
                    />
                  </div>
                  <span
                    class="StyledRadioButton__StyledRadioButtonLabel-sc-g1f6ld-2"
                  >
                    other
                  </span>
                </label>
              </div>
            </div>
          </div>
          <div
            class="StyledBox-sc-13pk1d4-0 bJKUjK FormField__FormFieldBox-sc-m9hood-0 bDnNjI"
          >
            <label
              class="StyledText-sc-1sadyjn-0 glxzPv"
              for="includes"
            >
              include other designs to be able to copy their components
            </label>
            <div
              class="StyledBox-sc-13pk1d4-0 ekdXJk FormField__FormFieldContentBox-sc-m9hood-1 ioqNEM"
            >
              <button
                aria-expanded="false"
                aria-haspopup="listbox"
                aria-label="none"
                class="StyledButton-sc-323bzc-0 fBAPqi StyledSelect__StyledSelectDropButton-sc-znp66n-5 jiFWIS"
                type="button"
              >
                <div
                  class="StyledBox-sc-13pk1d4-0 fTVILT"
                >
                  <div
                    class="StyledBox-sc-13pk1d4-0 hdXjJl"
                  >
                    <div
                      class="StyledTextInput__StyledTextInputContainer-sc-1x30a0s-1 ddykB"
                    >
                      <input
                        autocomplete="off"
                        class="StyledTextInput-sc-1x30a0s-0 LBzQG StyledSelect__SelectTextInput-sc-znp66n-4 djgtjA"
                        inert=""
                        name="includes"
                        placeholder="none"
                        readonly=""
                        tabindex="-1"
                        type="text"
                        value=""
                      />
                    </div>
                  </div>
                  <div
                    class="StyledBox-sc-13pk1d4-0 eHNQYw"
                    style="min-width: auto;"
                  >
                    <svg
                      aria-label="FormDown"
                      class="StyledIcon-sc-ofa7kd-0 bHtbkK"
                      viewBox="0 0 24 24"
                    >
                      <path
                        d="m18 9-6 6-6-6"
                        fill="none"
                        stroke="#000"
                        stroke-width="2"
                      />
                    </svg>
                  </div>
                </div>
              </button>
            </div>
          </div>
          <footer
            class="StyledBox-sc-13pk1d4-0 jrsrSM"
          >
            <button
              class="StyledButton-sc-323bzc-0 feJhTt"
              title="create design"
              type="submit"
            >
              Create Design
            </button>
          </footer>
        </form>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`App create 3`] = `
<DocumentFragment>
  <div
    class="StyledGrommet-sc-19lkkz7-0 jtlCeJ"
  >
    <div
      class="StyledBox-sc-13pk1d4-0 coKjDy"
    >
      <div
        class="StyledBox-sc-13pk1d4-0 emyfQI"
      >
        <header
          class="StyledBox-sc-13pk1d4-0 dIgkfr"
        >
          <div
            class="StyledGrid-sc-1wofa1l-0 dqOOen"
          >
            <div
              class="StyledBox-sc-13pk1d4-0 ixbQGl"
            />
            <div
              class="StyledBox-sc-13pk1d4-0 eALdhU"
            >
              <h1
                class="StyledHeading-sc-1rdh4aw-0 fKqjMz"
              >
                new design
              </h1>
            </div>
            <div
              class="StyledBox-sc-13pk1d4-0 eqSQbA"
            />
            <div
              class="StyledBox-sc-13pk1d4-0 QcRkD"
            >
              <button
                aria-label="cancel creating a new design"
                class="StyledButton-sc-323bzc-0 iGmGqZ"
                type="button"
              >
                <svg
                  aria-label="Close"
                  class="StyledIcon-sc-ofa7kd-0 jCZnaS"
                  viewBox="0 0 24 24"
                >
                  <path
                    d="m3 3 18 18M3 21 21 3"
                    fill="none"
                    stroke="#000"
                    stroke-width="2"
                  />
                </svg>
              </button>
            </div>
          </div>
        </header>
        <form>
          <div
            class="StyledBox-sc-13pk1d4-0 bJKUjK FormField__FormFieldBox-sc-m9hood-0 bDnNjI"
          >
            <label
              class="StyledText-sc-1sadyjn-0 glxzPv"
              for="name"
            >
              name
            </label>
            <div
              class="StyledBox-sc-13pk1d4-0 ekdXJk FormField__FormFieldContentBox-sc-m9hood-1 cwAnbn"
            >
              <div
                class="StyledTextInput__StyledTextInputContainer-sc-1x30a0s-1 ddykB"
              >
                <input
                  autocomplete="off"
                  class="StyledTextInput-sc-1x30a0s-0 cxKzl"
                  id="name"
                  name="name"
                  value="test design"
                />
              </div>
            </div>
          </div>
          <div
            class="StyledBox-sc-13pk1d4-0 jCFAxj"
            id="startWith"
            role="radiogroup"
          >
            <label
              class="StyledRadioButton__StyledRadioButtonContainer-sc-g1f6ld-0 kORknD"
              for="startWith-start with a blank design"
            >
              <div
                class="StyledBox-sc-13pk1d4-0 iudayb StyledRadioButton-sc-g1f6ld-5 keMHan"
              >
                <input
                  checked=""
                  class="StyledRadioButton__StyledRadioButtonInput-sc-g1f6ld-1 jvFKej"
                  id="startWith-start with a blank design"
                  name="startWith"
                  tabindex="0"
                  type="radio"
                  value="start with a blank design"
                />
                <div
                  class="StyledBox-sc-13pk1d4-0 fJpexJ StyledRadioButton__StyledRadioButtonBox-sc-g1f6ld-4 fWeldY"
                >
                  <svg
                    class="StyledRadioButton__StyledRadioButtonIcon-sc-g1f6ld-3 jMAcxd"
                    preserveAspectRatio="xMidYMid meet"
                    viewBox="0 0 24 24"
                  >
                    <circle
                      cx="12"
                      cy="12"
                      r="6"
                    />
                  </svg>
                </div>
              </div>
              <span
                class="StyledRadioButton__StyledRadioButtonLabel-sc-g1f6ld-2"
              >
                start with a blank design
              </span>
            </label>
            <div
              class="StyledBox__StyledBoxGap-sc-13pk1d4-1 iGPQzj"
            />
            <label
              class="StyledRadioButton__StyledRadioButtonContainer-sc-g1f6ld-0 kORknD"
              for="startWith-duplicate an existing design"
            >
              <div
                class="StyledBox-sc-13pk1d4-0 iudayb StyledRadioButton-sc-g1f6ld-5 keMHan"
              >
                <input
                  class="StyledRadioButton__StyledRadioButtonInput-sc-g1f6ld-1 jvFKej"
                  id="startWith-duplicate an existing design"
                  name="startWith"
                  tabindex="-1"
                  type="radio"
                  value="duplicate an existing design"
                />
                <div
                  class="StyledBox-sc-13pk1d4-0 kRQUWV StyledRadioButton__StyledRadioButtonBox-sc-g1f6ld-4 fWeldY"
                />
              </div>
              <span
                class="StyledRadioButton__StyledRadioButtonLabel-sc-g1f6ld-2"
              >
                duplicate an existing design
              </span>
            </label>
          </div>
          <div
            class="StyledBox-sc-13pk1d4-0 bJKUjK FormField__FormFieldBox-sc-m9hood-0 bDnNjI"
          >
            <label
              class="StyledText-sc-1sadyjn-0 glxzPv"
            >
              theme
            </label>
            <div
              class="StyledBox-sc-13pk1d4-0 dpvfKN FormField__FormFieldContentBox-sc-m9hood-1 ioqNEM"
            >
              <div
                class="StyledBox-sc-13pk1d4-0 cngkLX"
                role="radiogroup"
              >
                <label
                  class="StyledRadioButton__StyledRadioButtonContainer-sc-g1f6ld-0 kORknD"
                  for="grommet"
                >
                  <div
                    class="StyledBox-sc-13pk1d4-0 iudayb StyledRadioButton-sc-g1f6ld-5 keMHan"
                  >
                    <input
                      checked=""
                      class="StyledRadioButton__StyledRadioButtonInput-sc-g1f6ld-1 jvFKej"
                      id="grommet"
                      name="theme"
                      tabindex="0"
                      type="radio"
                      value="grommet"
                    />
                    <div
                      class="StyledBox-sc-13pk1d4-0 fJpexJ StyledRadioButton__StyledRadioButtonBox-sc-g1f6ld-4 fWeldY"
                    >
                      <svg
                        class="StyledRadioButton__StyledRadioButtonIcon-sc-g1f6ld-3 jMAcxd"
                        preserveAspectRatio="xMidYMid meet"
                        viewBox="0 0 24 24"
                      >
                        <circle
                          cx="12"
                          cy="12"
                          r="6"
                        />
                      </svg>
                    </div>
                  </div>
                  <span
                    class="StyledRadioButton__StyledRadioButtonLabel-sc-g1f6ld-2"
                  >
                    grommet
                  </span>
                </label>
                <div
                  class="StyledBox__StyledBoxGap-sc-13pk1d4-1 iGPQzj"
                />
                <label
                  class="StyledRadioButton__StyledRadioButtonContainer-sc-g1f6ld-0 kORknD"
                  for="hpe"
                >
                  <div
                    class="StyledBox-sc-13pk1d4-0 iudayb StyledRadioButton-sc-g1f6ld-5 keMHan"
                  >
                    <input
                      class="StyledRadioButton__StyledRadioButtonInput-sc-g1f6ld-1 jvFKej"
                      id="hpe"
                      name="theme"
                      tabindex="-1"
                      type="radio"
                      value="hpe"
                    />
                    <div
                      class="StyledBox-sc-13pk1d4-0 kRQUWV StyledRadioButton__StyledRadioButtonBox-sc-g1f6ld-4 fWeldY"
                    />
                  </div>
                  <span
                    class="StyledRadioButton__StyledRadioButtonLabel-sc-g1f6ld-2"
                  >
                    hpe
                  </span>
                </label>
                <div
                  class="StyledBox__StyledBoxGap-sc-13pk1d4-1 iGPQzj"
                />
                <label
                  class="StyledRadioButton__StyledRadioButtonContainer-sc-g1f6ld-0 kORknD"
                  for="other"
                >
                  <div
                    class="StyledBox-sc-13pk1d4-0 iudayb StyledRadioButton-sc-g1f6ld-5 keMHan"
                  >
                    <input
                      class="StyledRadioButton__StyledRadioButtonInput-sc-g1f6ld-1 jvFKej"
                      id="other"
                      name="theme"
                      tabindex="-1"
                      type="radio"
                      value="other"
                    />
                    <div
                      class="StyledBox-sc-13pk1d4-0 kRQUWV StyledRadioButton__StyledRadioButtonBox-sc-g1f6ld-4 fWeldY"
                    />
                  </div>
                  <span
                    class="StyledRadioButton__StyledRadioButtonLabel-sc-g1f6ld-2"
                  >
                    other
                  </span>
                </label>
              </div>
            </div>
          </div>
          <div
            class="StyledBox-sc-13pk1d4-0 bJKUjK FormField__FormFieldBox-sc-m9hood-0 bDnNjI"
          >
            <label
              class="StyledText-sc-1sadyjn-0 glxzPv"
              for="includes"
            >
              include other designs to be able to copy their components
            </label>
            <div
              class="StyledBox-sc-13pk1d4-0 ekdXJk FormField__FormFieldContentBox-sc-m9hood-1 ioqNEM"
            >
              <button
                aria-expanded="false"
                aria-haspopup="listbox"
                aria-label="none"
                class="StyledButton-sc-323bzc-0 fBAPqi StyledSelect__StyledSelectDropButton-sc-znp66n-5 jiFWIS"
                type="button"
              >
                <div
                  class="StyledBox-sc-13pk1d4-0 fTVILT"
                >
                  <div
                    class="StyledBox-sc-13pk1d4-0 hdXjJl"
                  >
                    <div
                      class="StyledTextInput__StyledTextInputContainer-sc-1x30a0s-1 ddykB"
                    >
                      <input
                        autocomplete="off"
                        class="StyledTextInput-sc-1x30a0s-0 LBzQG StyledSelect__SelectTextInput-sc-znp66n-4 djgtjA"
                        inert=""
                        name="includes"
                        placeholder="none"
                        readonly=""
                        tabindex="-1"
                        type="text"
                        value=""
                      />
                    </div>
                  </div>
                  <div
                    class="StyledBox-sc-13pk1d4-0 eHNQYw"
                    style="min-width: auto;"
                  >
                    <svg
                      aria-label="FormDown"
                      class="StyledIcon-sc-ofa7kd-0 bHtbkK"
                      viewBox="0 0 24 24"
                    >
                      <path
                        d="m18 9-6 6-6-6"
                        fill="none"
                        stroke="#000"
                        stroke-width="2"
                      />
                    </svg>
                  </div>
                </div>
              </button>
            </div>
          </div>
          <footer
            class="StyledBox-sc-13pk1d4-0 jrsrSM"
          >
            <button
              class="StyledButton-sc-323bzc-0 feJhTt"
              title="create design"
              type="submit"
            >
              Create Design
            </button>
          </footer>
        </form>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`App create 4`] = `
<DocumentFragment>
  <div
    class="StyledGrommet-sc-19lkkz7-0 jtlCeJ"
  >
    <div
      class="StyledBox-sc-13pk1d4-0 dFBrFk"
    >
      <div
        class="StyledBox-sc-13pk1d4-0 bLrCdT"
      >
        <form>
          <div
            class="StyledBox-sc-13pk1d4-0 bJKUjK FormField__FormFieldBox-sc-m9hood-0 bDnNjI"
          >
            <label
              class="StyledText-sc-1sadyjn-0 glxzPv"
              for="template"
            >
              screen template
            </label>
            <div
              class="StyledBox-sc-13pk1d4-0 ekdXJk FormField__FormFieldContentBox-sc-m9hood-1 ioqNEM"
            >
              <button
                aria-expanded="false"
                aria-haspopup="listbox"
                aria-label="Open Drop; Selected: empty page"
                class="StyledButton-sc-323bzc-0 fBAPqi StyledSelect__StyledSelectDropButton-sc-znp66n-5 jiFWIS"
                id="template"
                type="button"
              >
                <div
                  class="StyledBox-sc-13pk1d4-0 fTVILT"
                >
                  <div
                    class="StyledBox-sc-13pk1d4-0 hdXjJl"
                  >
                    <div
                      class="StyledBox-sc-13pk1d4-0 dpnccK"
                    >
                      <span
                        class="StyledText-sc-1sadyjn-0 cUpCuS"
                      >
                        empty page
                      </span>
                      <div
                        class="StyledBox__StyledBoxGap-sc-13pk1d4-1 iGPQzj"
                      />
                      <span
                        class="StyledText-sc-1sadyjn-0 yYdDf"
                      >
                        generic
                      </span>
                    </div>
                    <input
                      class="StyledSelect__HiddenInput-sc-znp66n-2 egmuHd"
                      id="template__input"
                      inert=""
                      name="template"
                      readonly=""
                      type="text"
                    />
                  </div>
                  <div
                    class="StyledBox-sc-13pk1d4-0 eHNQYw"
                    style="min-width: auto;"
                  >
                    <svg
                      aria-label="FormDown"
                      class="StyledIcon-sc-ofa7kd-0 bHtbkK"
                      viewBox="0 0 24 24"
                    >
                      <path
                        d="m18 9-6 6-6-6"
                        fill="none"
                        stroke="#000"
                        stroke-width="2"
                      />
                    </svg>
                  </div>
                </div>
              </button>
            </div>
          </div>
          <footer
            class="StyledBox-sc-13pk1d4-0 bhBTej"
          >
            <button
              class="StyledButton-sc-323bzc-0 feJhTt"
              title="Use selected screen template"
              type="submit"
            >
              Use Template
            </button>
          </footer>
        </form>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`App create 5`] = `
<DocumentFragment>
  <div
    class="StyledGrommet-sc-19lkkz7-0 jtlCeJ"
  >
    <div
      class="StyledGrommet-sc-19lkkz7-0 dMqcrh"
      id="designer-canvas"
    >
      <div
        class="StyledBox-sc-13pk1d4-0 juTjBQ"
        id="2"
        style="outline: 1px dashed red;"
        tabindex="-1"
      >
        <div
          class="StyledBox-sc-13pk1d4-0 iXfYsM"
          id="3"
          tabindex="-1"
        >
          <div
            class="sc-fYsHOw elHWcF"
          >
            <p
              class="StyledParagraph-sc-tbetod-0 ANQRq"
            >
              This PageContent is currently empty. Add some content to it.
            </p>
          </div>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;
